--- a/main.html
+++ b/main.html
@@ -8,8 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+ <div>
+	
+	<h3 id="letterCount"> 0 </h3>
+	<b>mini scrabble - counting the letters </b> 
+	<input type="text" id="evaluatedText" oninput="myFunction()">
+ </div>
+
+    
+<script src="./script.js"></script>
 
 </body>
 
